2002-07-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Eliminate PGM.
	Add bsplib_DATA = $(PROJECT_RELEASE)/lib/start$(LIB_VARIANT).o.

2002-07-20	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* startup/Makefile.am: Add bsplib_DATA = linkcmds.

2002-07-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Eliminate TMPINSTALL_FILES.
	Remove $(OBJS) from all-local.

2002-06-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Remove preinstallation of libbsp.a,

2001-05-09	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: In support of gcc 3.1, added one of more
	of the sections .jcr, .rodata*, .data.*, .gnu.linkonce.s2.*,
	.gnu.linkonce.sb2.*, and .gnu.linkonce.s.*.  Spacing corrections
	and direction of segments to memory regions may also have been
	addressed.  This was a sweep across all BSPs.
 
2002-04-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* irq/irq.c: Reflect changes to <rtems/score/cpu.h>.
	* irq/irq_asm.S: Ditto.
	* network/network.c: Include <rtems/bspIo.h>.
	* start/start.S: Include <asm.h> instead of "asm.h".
	* vectors/vectors.S: Reflect changes to <rtems/score/cpu.h>.

2002-04-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* startup/bspstart.c: Include <libcpu/cpuIdent.h>, <rtems/bspIo.h>.

2002-04-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add BSPOPTS_*(DISPATCH_HANDLER_STAT).

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* clock/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* console/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* irq/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* network/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* start/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* startup/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* vectors/Makefile.am: Remove AUTOMAKE_OPTIONS.